Fixed spacing on hobbies html

--- a/styles.css
+++ b/styles.css
@@ -244,19 +244,13 @@ a.social:hover {
   min-height: 30px;
   padding: 10px;
   text-align: center;
-  position: fixed;
 }
-
-.Hobbies-Title{
-  text-align: center;
-  margin-top: 50px;
-}
-
 .Hobbies-card{
-  margin: 30px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 20px 40px 40px;
-  max-width: 500px;
-  margin-left: ;
+  max-width: 450px;
+  text-align: center;
   background: #fff;
   border: 4px solid #ccc;
   border-radius: 6px;
